--- a/database/db-tools-mysql/yaml/1-db-tools-mysql-ns.yaml
+++ b/database/db-tools-mysql/yaml/1-db-tools-mysql-ns.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: mysql-client
+  name: db-tools
   labels:
-    name: mysql-client
+    name: db-tools
