--- a/database/db-tools-mysql/yaml/3-db-tools-mysql-deploy.yaml
+++ b/database/db-tools-mysql/yaml/3-db-tools-mysql-deploy.yaml
@@ -29,6 +29,13 @@ spec:
         volumeMounts:
         - name: rk-client-claim-gp3   #x2
           mountPath: /db-data
+        resources:
+          requests:
+            cpu: "64m"
+            memory: "64Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
       volumes: 
       - name: rk-client-claim-gp3   #x2
         persistentVolumeClaim:
