--- a/database/db-tools-mysql/yaml/3-db-tools-mysql-deploy.yaml
+++ b/database/db-tools-mysql/yaml/3-db-tools-mysql-deploy.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: db-tools
 spec:
   replicas: 1
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       app: rk-client
