add mysql server2

--- a/database/mysql-server/yaml/2-mysql-server-secrets.yaml
+++ b/database/mysql-server/yaml/2-mysql-server-secrets.yaml
@@ -5,9 +5,9 @@ metadata:
   name: mysql-server-secrets
   namespace: mysql-server
 data:
-  mysqlRootPassword: c2FraWxhW10x
-  mysqlUser: aWJl
-  mysqlPassword: YWRtaW4=
+  mysqlRootPassword: UEBzc3dvcmQxMjM=   # Example password: P@ssword123
+  mysqlUser: dXNlcl8x                   # Example user:     user_1
+  mysqlPassword: UEBzc3dvcmQxMjM=       # Example password: P@ssword123
 
 # echo -n XXX | base64
 # kubectl -n mysql-server get secret mysql-server-secrets -oyaml | awk '/mysqlRootPassword:/ {print $NF}' | base64 -d ; echo
