--- a/database/mysql-server/yaml/3-mysql-server-cm-users.yaml
+++ b/database/mysql-server/yaml/3-mysql-server-cm-users.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: users       #x3a        # Example password: P@ssword123
+  namespace: mysql-server
 data:                           # Example user:     user_2
   create-user.sql: |-
     CREATE USER 'user_3'@'%.svc.cluster.local' IDENTIFIED BY 'P@ssword123';  
