--- a/database/v1-InnoDBCluster-8.4.1-2.1.4/3-mysql-secret.yaml
+++ b/database/v1-InnoDBCluster-8.4.1-2.1.4/3-mysql-secret.yaml
@@ -15,5 +15,12 @@ metadata:
   name: mypwds
 stringData:
   rootUser: root
-  rootHost: '%'
-  rootPassword: sakila[]1
+  rootHost: '%'               # Can be VPC CIDR
+  rootPassword: P@ssword123   # Example password
+
+# ====================
+# Create secret manually
+# kubectl create secret generic mypwds \
+#   --from-literal=rootUser=root \
+#   --from-literal=rootHost=% \
+#   --from-literal=rootPassword="P@ssword123"
