--- a/database/v1-InnoDBCluster-8.4.1-2.1.4/4-mysql-cluster.yaml
+++ b/database/v1-InnoDBCluster-8.4.1-2.1.4/4-mysql-cluster.yaml
@@ -4,9 +4,11 @@ kind: InnoDBCluster
 metadata:
   name: mycluster-v1
 spec:
+  version: "8.4.1"      # Server version: 8.4.1 MySQL Community Server - GPL
   secretName: mypwds
   instances: 3
   router:
+    version: "8.4.1"    # Server version: 8.4.1-router MySQL Community Server - GPL
     instances: 1
   tlsUseSelfSigned: true
   datadirVolumeClaimTemplate:
@@ -15,16 +17,32 @@ spec:
     resources:
       requests:
         storage: 10Gi
+  backupProfiles:
+    - name: s3-backup
+      dumpInstance:
+        dumpOptions:
+        storage:
+          s3:
+            bucketName: raf-ojt-bucket 
+            prefix: mysql-backup/
+            config: s3-secret
+            profile: default 
+            endpoint: https://s3.eu-west-1.amazonaws.com
+  backupSchedules:
+    - name: test-s3-backup-schedule
+      schedule: "*/5 * * * *" 
+      backupProfileName: s3-backup 
+      enabled: false  
   podSpec:                      # >> OK
     containers:
     - name: mysql
       resources:
         requests:
-          memory: "1Gi"         # "1Gi"="1024Mi"      #"2048Mi"
+          memory: "1024Mi"         # "1Gi"="1024Mi"      #"2048Mi"
           cpu: "600m"           # "1800m"
         limits:
-          memory: "2Gi"         # "4Gi"="4096Mi"      #"8192Mi"
-          cpu: "1"              # "3600m"             # time_zone = UTC this is causing issues to deploy
+          memory: "2048Mi"         # "4Gi"="4096Mi"      #"8192Mi"
+          cpu: "1000m"              # "3600m"             # time_zone = UTC this is causing issues to deploy
   mycnf: |
     [mysqld]
     lower_case_table_names=1
