mysqldump cron configured

--- a/database/v1-InnoDBCluster-8.4.1-2.1.4/3-mysql-secret.yaml
+++ b/database/v1-InnoDBCluster-8.4.1-2.1.4/3-mysql-secret.yaml
@@ -12,7 +12,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mypwds
+  name: mysql-secret
+  namespace: mysql-cluster
 stringData:
   rootUser: root
   rootHost: '%'               # Can be VPC CIDR
