--- a/database/v1-InnoDBCluster-8.4.1-2.1.4/4-s3-secret.yaml
+++ b/database/v1-InnoDBCluster-8.4.1-2.1.4/4-s3-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: s3-secret
+  namespace: mysql-cluster
 type: Opaque
 stringData:
   credentials: |
@@ -12,3 +13,7 @@ stringData:
   config: |
     [default]
     region=eu-west-1
+
+# no need for it if
+#    backupSchedules:
+#      enabled: false
