--- a/database/v1-InnoDBCluster-8.4.1-2.1.4/3-mysql-secret.yaml
+++ b/database/v1-InnoDBCluster-8.4.1-2.1.4/3-mysql-secret.yaml
@@ -21,7 +21,4 @@ stringData:
 
 # ====================
 # Create secret manually
-# kubectl create secret generic mypwds \
-#   --from-literal=rootUser=root \
-#   --from-literal=rootHost=% \
-#   --from-literal=rootPassword="P@ssword123"
+# kubectl create secret generic mypwds --from-literal=rootUser=root --from-literal=rootHost=% --from-literal=rootPassword="P@ssword123"
