--- a/database/v1-InnoDBCluster-8.4.1-2.1.4/5-mysql-cluster.yaml
+++ b/database/v1-InnoDBCluster-8.4.1-2.1.4/5-mysql-cluster.yaml
@@ -3,7 +3,7 @@ apiVersion: mysql.oracle.com/v2
 kind: InnoDBCluster
 metadata:
   name: mysql-cluster
-  namespace: mysql-cluster
+  # namespace: mysql-cluster
 spec:
   version: "8.4.1"      # Server version: 8.4.1 MySQL Community Server - GPL
   secretName: mysql-secret
@@ -19,7 +19,7 @@ spec:
       requests:
         storage: 4Gi
   backupProfiles:
-    - name: s3-backup
+    - name: s3-bkp
       dumpInstance:
         dumpOptions:
         storage:
@@ -30,7 +30,7 @@ spec:
             profile: default 
             endpoint: https://s3.eu-west-1.amazonaws.com
   backupSchedules:
-    - name: test-s3-backup-schedule
+    - name: s3-bkp-schedule
       schedule: "*/5 * * * *" 
       backupProfileName: s3-backup 
       enabled: false  
