--- a/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/b1-Recreate-deploy.yaml
+++ b/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/b1-Recreate-deploy.yaml
@@ -9,13 +9,8 @@ metadata:
 spec:
   revisionHistoryLimit: 3
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-    #  maxUnavailable: 25%
-    #  maxSurge: 25%
-      maxUnavailable: 1
-      maxSurge: 1
-  replicas: 16
+    type: Recreate
+  replicas: 8
   selector:
     matchLabels:
       app: myapp
