--- a/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/c2-green-deploy.yaml
+++ b/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/c2-green-deploy.yaml
@@ -2,22 +2,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: green-myapp
   namespace: default
-  annotations:
-    kubernetes.io/change-cause: "change reason goes here"
 spec:
-  revisionHistoryLimit: 3
-  strategy:
-    type: Recreate
-  replicas: 8
+  replicas: 2
   selector:
     matchLabels:
-      app: myapp
+      app: myapp        # <<
+      replica: green    # <<
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp      # <<
+        replica: green  # <<
     spec:
       containers:
         - name: myapp
@@ -28,6 +25,6 @@ spec:
           startupProbe:
             tcpSocket:
               port: 8181
-            initialDelaySeconds: 20   # to delay a bit
+            initialDelaySeconds: 20
             periodSeconds: 5
           resources: {}
