--- a/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/c1-blue-deploy.yaml
+++ b/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/c1-blue-deploy.yaml
@@ -2,32 +2,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: blue-myapp
   namespace: default
-  annotations:
-    kubernetes.io/change-cause: "change reason goes here"
 spec:
-  revisionHistoryLimit: 3
-  strategy:
-    type: Recreate
-  replicas: 8
+  replicas: 2
   selector:
     matchLabels:
-      app: myapp
+      app: myapp      # <<
+      replica: blue   # <<
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp    # <<
+        replica: blue # <<
     spec:
       containers:
         - name: myapp
-          image: aputra/myapp-171:v2
+          image: aputra/myapp-171:v1
           ports:
             - name: http
               containerPort: 8181
           startupProbe:
             tcpSocket:
               port: 8181
-            initialDelaySeconds: 20   # to delay a bit
+            initialDelaySeconds: 20
             periodSeconds: 5
           resources: {}
