--- a/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/d1-deploy.yaml
+++ b/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/d1-deploy.yaml
@@ -4,30 +4,25 @@ kind: Deployment
 metadata:
   name: myapp
   namespace: default
-  annotations:
-    kubernetes.io/change-cause: "change reason goes here"
 spec:
-  revisionHistoryLimit: 3
-  strategy:
-    type: Recreate
-  replicas: 8
+  replicas: 0    # << this does the job
   selector:
     matchLabels:
-      app: myapp
+      app: myapp    # << x1
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp    # << x1
     spec:
       containers:
         - name: myapp
-          image: aputra/myapp-171:v2
+          image: aputra/myapp-171:v1
           ports:
             - name: http
               containerPort: 8181
           startupProbe:
             tcpSocket:
               port: 8181
-            initialDelaySeconds: 20   # to delay a bit
+            initialDelaySeconds: 20
             periodSeconds: 5
           resources: {}
