conggure sa for s3

--- a/database/db-tools-mysql/yaml/3-db-tools-mysql-deploy.yaml
+++ b/database/db-tools-mysql/yaml/3-db-tools-mysql-deploy.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rk-client
+  name: db-tools-dp
   namespace: db-tools
 spec:
   replicas: 1
