--- a/database/couchbase-ce/1-cm-cbdb.yaml
+++ b/database/couchbase-ce/1-cm-cbdb.yaml
@@ -1,9 +1,20 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: couchbase-config
 data:
   COUCHBASE_USERNAME: "Administrator"
-  COUCHBASE_PASSWORD: "password"
-  COUCHBASE_BUCKET_NAME: "default"
-  COUCHBASE_CLUSTER_SIZE: "3"
+  COUCHBASE_CLUSTER_NAME: "cbdb-123"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: couchbase-secret
+type: Opaque
+data:
+  COUCHBASE_PASSWORD: cGFzc3dvcmQ=
+# stringData:
+#   COUCHBASE_PASSWORD: "password"  # here it can be just a string
+
+# echo -n "password" | base64 
