--- a/database/couchbase-ce/3-hsvc-cbdb.yaml
+++ b/database/couchbase-ce/3-hsvc-cbdb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: couchbase-headless
+  name: cbdb-hsvc
 spec:
   clusterIP: None
   selector:
@@ -10,6 +10,5 @@ spec:
     - name: couchbase
       port: 8091
       targetPort: 8091
-    # - name: couchbase-https
-    #   port: 18091
-    #   targetPort: 18091
+
+# kubectl port-forward cbdb-sts-0 8091:8091
