--- a/database/db-tools-mysql/yaml/6-dnsutils.yaml
+++ b/database/db-tools-mysql/yaml/6-dnsutils.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: dnsutils
-# namespace: default
+  namespace: db-tools
 spec:
   containers:
   - name: dnsutils
