--- a/database/couchbase-ce/k8s/4-sts-cbdb.yaml
+++ b/database/couchbase-ce/k8s/4-sts-cbdb.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: cbdb-sts
+  namespace: couchbase-ce
 spec:
   serviceName: cbdb-hsvc
   replicas: 3
