--- a/database/couchbase-ce/k8s/dnsutils.yaml
+++ b/database/couchbase-ce/k8s/dnsutils.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: dnsutils
-# namespace: default
+  namespace: couchbase-ce
 spec:
   containers:
   - name: dnsutils
