--- a/database/couchbase-ce/argocd-couchbase-ce.yaml
+++ b/database/couchbase-ce/argocd-couchbase-ce.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: couchbase-ce
-#  namespace: couchbase-ce
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io  # terminate app first before deleting argocd application (cleanup)
 spec:
