--- a/database/couchbase-ce/argocd-couchbase-ce.yaml
+++ b/database/couchbase-ce/argocd-couchbase-ce.yaml
@@ -5,7 +5,7 @@ metadata:
   name: couchbase-ce
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io  # terminate app first before deleting argocd application (cleanup)
+    - resources-finalizer.argocd.argoproj.io/couchbase-ce # terminate app first before deleting argocd application (cleanup)
 spec:
   project: default
   source:
