move to kind cluster

--- a/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z5-ARGO-ing.yaml
+++ b/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z5-ARGO-ing.yaml
@@ -21,7 +21,7 @@ metadata:
   # alb.ingress.kubernetes.io/group.order: '0'
 spec:
   rules:
-    - host: argosquares.ops.perf.openjawhosting.com
+    - host: argosquares.ops.perf.hosting.com
       http:
         paths:
           - path: /
