--- a/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z6-ARGO-ingTest.yaml
+++ b/apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z6-ARGO-ingTest.yaml
@@ -21,7 +21,7 @@ metadata:
   # alb.ingress.kubernetes.io/group.order: '0'
 spec:
   rules:
-    - host: argosquares-test.ops.perf.openjawhosting.com
+    - host: argosquares-test.ops.perf.hosting.com
       http:
         paths:
           - path: /
