--- a/apps-1/voting-app/9-ing-voting-app.yaml
+++ b/apps-1/voting-app/9-ing-voting-app.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rk-ing-v1
-  namespace: voting
+  namespace: voting-app
   annotations:
     alb.ingress.kubernetes.io/load-balancer-name: rk-ing-v1
     alb.ingress.kubernetes.io/scheme: internet-facing
@@ -24,7 +24,7 @@ metadata:
     alb.ingress.kubernetes.io/group.order: '52'
 spec:
   rules:  
-    - host: voting.ops.perf.openjawhosting.com
+    - host: voting.ops.perf.hosting.com
       http:
         paths:
           - path: /
@@ -34,7 +34,7 @@ spec:
                 name: vote
                 port: 
                   number: 8080
-    - host: results.ops.perf.openjawhosting.com
+    - host: results.ops.perf.hosting.com
       http:
         paths:
           - path: /
